# microai-dao-core

./: .env.example  .env.security.example  Anchor.toml  CONTRIBUTING.md  DEPLOYMENT_ADDRESSES.txt  DEPLOYMENT_TEST_REPORT.md  Dockerfile  EXECAIDAOSmartContractImplementationGuide(1).md  ExecAIplan.md  GETTING_STARTED.md  LICENSE  Makefile  MicroAI_Master_Document_Investor.md  README.md  README_PHASE1.md  RESTRUCTURING_PLAN.md  SECURITY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  TEST_REPORT.md  TEST_SUMMARY.txt  alembic.ini  deploy-full.sh  deploy-production.sh  deploy-testnet.sh  docker-compose.yml  groksEXECAIplan.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt  requirements_security.txt
.github/: ORGANIZATION.md
api/: __init__.py  app.py  models.py
archive/: CHANGELOG.md  COMPLETE IMPLEMENTATION GUIDE.md  DEPLOYMENT_STATUS.md  GStyle Output Framework.md  INTEGRATION_SUMMARY.md  Kubuntu Setup Guide for MicroAI DAO LLC.md  MISSING FILES CHECKLIST.md  PHASE1_COMPLETE.md  Quick Start Guide.md  README_TRUST_STACK.md  README_new.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_STATUS_FINAL.md  SYNTHETIC_TRUST_COMPLETE.md  Setting Up Your GitHub Repository.md  Updated Commands for gnoscenti.md  WARP.md
automation/: client_acquisition_bot.py  revenue_generation_system.py  youtube_content_generator.py
database/: init_db.py  schema.sql
docker/: Dockerfile  docker-compose.yml
docs/: PHASE1_FEATURES.md  README.md  SECURITY_AUDIT.md  SYNTHETIC_TRUST_UPDATE.md  TRUST_STACK_INTEGRATION.md  synthetic_trust.md
examples/: full_stack_demo.py  phase1_demo.py  (+1 more)
(+67 files in other folders)
